--- a/service.html
+++ b/service.html
@@ -24,6 +24,11 @@
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Open+Sans&display=swap" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -124,59 +129,55 @@
         <!-- Full Screen Search End -->
 
 
-        <!-- Service Start -->
-        <div class="container-xxl py-5">
-            <div class="container px-lg-5">
-                <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="position-relative d-inline text-primary ps-4">Our Services</h6>
-                    <h2 class="mt-2">What Solutions We Provide</h2>
+        <div class="main section-10">
+            <div class="all">
+              <div class="lefter">
+                <div class="box rounded-3 py-3">
+                  <div class="icon d-flex justify-content-center align-items-center">
+                    <span class="circle rounded-circle">
+                      <i class="fas fa-laptop"></i>
+                    </span>
+                  </div>
+                  <h6 class="text-center text-limit-1 mt-2 text-color-black">Website Development</h6>
                 </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
-                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-code fa-2x"></i>
-                            </div>
-                            <h5 class="mb-3">Web development</h5>
-                            <p>"Creating and maintaining websites to enhance user experience and functionality online."</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-mobile fa-2x"></i>
-                            </div>
-                            <h5 class="mb-3">App Development</h5>
-                            <p>"Focused on creating high-quality apps for various platforms, ensuring functionality, user experience, and performance."</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-share fa-2x"></i>
-                            </div>
-                            <h5 class="mb-3">Digital Marketing</h5>
-                            <p>"Expert in digital marketing, driving growth through SEO, social media, content strategy, and analytics."</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
-                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-rss fa-2x"></i>
-                            </div>
-                            <h5 class="mb-3">IoT Development</h5>
-                            <p>"IoT development focuses on creating interconnected devices that communicate seamlessly to automate and enhance functionality."</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
-                        </div>
-                    </div>
-                    </div>
+              </div>
+              <div class="left">
+                <div class="box rounded-3 py-3">
+                  <div class="icon d-flex justify-content-center align-items-center">
+                    <span class="circle rounded-circle">
+                      <i class="fas fa-shopping-bag"></i>
+                    </span>
+                  </div>
+                  <h6 class="text-center text-limit-1 mt-2 text-color-black">E-commerce</h6>
                 </div>
+              </div>
+              <div class="center">
+                <div class="box rounded-3 py-3 center-box">
+                  <span>Our Service</span>
+                </div>
+              </div>
+              <div class="right">
+                <div class="box rounded-3 py-3">
+                  <div class="icon d-flex justify-content-center align-items-center">
+                    <span class="circle rounded-circle">
+                      <i class="fas fa-share-alt"></i>
+                    </span>
+                  </div>
+                  <h6 class="text-center text-limit-1 mt-2 text-color-black">Digital Marketting</h6>
+                </div>
+              </div>
+              <div class="righter">
+                <div class="box rounded-3 py-3">
+                    <div class="icon d-flex justify-content-center align-items-center">
+                      <span class="circle rounded-circle">
+                        <i class="fas fa-cloud"></i>
+                      </span>
+                    </div>
+                    <h6 class="text-center text-limit-1 mt-2 text-color-black">IOT</h6>
+                  </div>
+              </div>
             </div>
-        </div>
-        <!-- Service End -->
+          </div>
         
 
       <!-- Footer Start -->
@@ -260,6 +261,12 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
